--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
     "ng": "ng",
     "start": "ng serve -o",
     "build": "ng build",
+    "build:href": "ng build --base-href ./",
+    "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "delete:docs": "rm -r docs",
+    "copy:dist": "cp -r dist/bases/ ./docs"
   },
   "private": true,
   "dependencies": {
